update README.md for how to start with Java 9